update docker build to include ca-certificates

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,8 @@ RUN chmod +x sentry_exporter
 
 FROM debian:buster-slim
 
+RUN apt-get update && apt-get install -y ca-certificates
+
 COPY --from=builder /app/sentry_exporter  /sentry_exporter
 COPY sentry_exporter.yml       /config.yml
 
