--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,8 +15,8 @@ FROM debian:buster-slim
 RUN apt-get update && apt-get install -y ca-certificates
 
 COPY --from=builder /app/sentry_exporter  /sentry_exporter
-COPY sentry_exporter.yml       /config.yml
+COPY sentry_exporter.yml       /sentry_exporter.yml
 
 EXPOSE      9412
 ENTRYPOINT  [ "/sentry_exporter" ]
-CMD         [ "-config.file=/config.yml" ]
+CMD         [ "-config.file=/sentry_exporter.yml" ]
