ci: change path to dockerfile

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,3 +20,4 @@ dockers:
   - image_templates:
       - "ghcr.io/zekker6/sentry_exporter:latest"
       - "ghcr.io/zekker6/sentry_exporter:{{ .Tag }}"
+    dockerfile: docker/Dockerfile
